RESOLVED FIXED 249110
[IFC][line-clamp][Debug] Fix fast/overflow/line-clamp-crash.html
https://bugs.webkit.org/show_bug.cgi?id=249110
Summary [IFC][line-clamp][Debug] Fix fast/overflow/line-clamp-crash.html
alan
Reported 2022-12-11 14:31:11 PST
asserting since 257591@main
Attachments
Patch (1.84 KB, patch)
2022-12-11 14:41 PST, alan
no flags
Patch (1.84 KB, patch)
2022-12-11 14:42 PST, alan
no flags
[fast-cq]Patch (1.84 KB, patch)
2022-12-11 14:49 PST, alan
no flags
alan
Comment 1 2022-12-11 14:41:48 PST
alan
Comment 2 2022-12-11 14:42:44 PST
Cameron McCormack (:heycam)
Comment 3 2022-12-11 14:48:22 PST
Comment on attachment 463992 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=463992&action=review > COMMIT_MESSAGE:1 > +[IFC][line-clam][Debug] Fix fast/overflow/line-clamp-crash.html "line-clamp"
alan
Comment 4 2022-12-11 14:49:38 PST
Created attachment 463993 [details] [fast-cq]Patch
EWS
Comment 5 2022-12-11 20:39:02 PST
Committed 257712@main (0b2a814592ab): <https://commits.webkit.org/257712@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 463993 [details].
Radar WebKit Bug Importer
Comment 6 2022-12-11 20:40:17 PST
Note You need to log in before you can comment on or make changes to this bug.