[IFC][line-clamp][Debug] Fix fast/overflow/line-clamp-crash.html https://bugs.webkit.org/show_bug.cgi?id=249110

Reviewed by Cameron McCormack.

Do not try to truncate the line when the inline level boxes produce no content even
if line-clamp value applies.
e.g.
<div line-clamp: 1>
  <div>
    <span><span><span> </span></span></span>
  </div>
  <div>
    This line should be truncated.
  </div>
</div>
(first IFC produces zero line with content)

* Source/WebCore/layout/formattingContexts/inline/InlineLineBuilder.cpp:
(WebCore::Layout::LineBuilder::close):

Canonical link: https://commits.webkit.org/257712@main